# fcis

haskell/: .gitignore  README.md  fcis.cabal  flake.nix
haskell/app/: Main.hs
haskell/src/: Cms.hs
haskell/test/: TestMain.hs
