cabal-version:   3.8
name:            fcis
version:         0
license:         BSD-3-Clause
build-type:      Simple
author:          Jonas Collberg
maintainer:      Jonas Collberg <jonas.collberg@gmail.com>
copyright:       2024 Jonas Collberg
tested-with:     GHC ==9.6.6
extra-doc-files: README.md

common common-options
  build-depends:      base >=4.9 && <5
  default-language:   Haskell2010
  default-extensions:
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    DuplicateRecordFields
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wpartial-fields
    -Wprepositive-qualified-module -Wredundant-constraints
    -fdefer-typed-holes -fhide-source-paths

library
  import:          common-options
  hs-source-dirs:  src
  exposed-modules: Cms
  build-depends:
    , aeson
    , bytestring
    , containers
    , http-conduit
    , mtl
    , text
    , time

executable fcis-exe
  import:         common-options
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:  fcis
  ghc-options:    -threaded -rtsopts -with-rtsopts=-N

test-suite fcis-test
  import:         common-options
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        TestMain.hs
  build-depends:
    , aeson
    , bytestring
    , directory
    , fcis
    , hspec
    , tasty
    , tasty-hspec

  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N -Wno-missing-home-modules
